--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -79,6 +79,11 @@ a.desc:after {
     }
 }
 
+div.required label.control-label:after {
+    content: " *";
+    color: red;
+}
+
 .nav > li > form > button.logout:focus,
 .nav > li > form > button.logout:hover {
     text-decoration: none;
