--- a/frontend/web/css/stylesheet.css
+++ b/frontend/web/css/stylesheet.css
@@ -18,6 +18,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Override the bootstrap defaults */
 h1 {
+    margin-top: 0;
     font-size: 33px;
 }
 
@@ -896,7 +897,7 @@ h2.price {
 }
 
 .auth-clients {
-    padding: 0 0 20px 0;
+    padding: 0;
 }
 
 /* OpenCart Code */
